--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 
 
 
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     // apply plugin: 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
     id  'kotlin-kapt'
 
 }
@@ -36,15 +37,33 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+
+
+
+    buildFeatures {
+        viewBinding = true
+    }
+    defaultConfig {
+
+        vectorDrawables.useSupportLibrary = true
+
+    }
 }
 
 dependencies {
+
+
+
+    implementation 'com.github.gcacace:signature-pad:1.3.1'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -53,27 +72,41 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
+
 
     // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    //  kapt "androidx.room:room-compiler:2.4.2"
-    // implementation 'android.arch.persistence.room:runtime:1.1.1';
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
-    implementation "androidx.room:room-ktx:2.4.0-beta02"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    androidTestImplementation "androidx.room:room-testing:2.4.2"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
     // Kotlin components
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
-    //kapt  "android.arch.persistence.room:compiler:2.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1-native-mt"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1-native-mt"
+
     //DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
+
+
+
+    // cardview
+    implementation"androidx.cardview:cardview:1.0.0"
+
+
+        implementation 'com.github.maze1377:android-prefix-edittext-textview:1.1.1'
+//kick-ass recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha04"
+
+
+
+
 }
