--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
     // apply plugin: 'kotlin-android'
     id 'kotlin-parcelize'
     id  'kotlin-kapt'
-
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -107,6 +107,16 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha04"
 
 
+//Dagga Hilt
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
+    // Timber logger
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    //green robo event bus
+    implementation("org.greenrobot:eventbus:3.3.1")
 }
