--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.momobooklet_by_sm">
+    package="com.example.momobooklet_by_sm" >
 
     <application
+        android:name=".BookletApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Shrinetutor2">
-        <activity
-            android:name=".displaytransactions.DisplayTransactions"
-            android:exported="false" />
-        <activity
-            android:name=".ManageUsers"
-            android:exported="false" />
-        <activity
-            android:name=".recordingtransanctions.RecordTransacts"
-            android:exported="false" />
+        android:theme="@style/Theme.Shrinetutor2" >
+
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
