--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 buildscript {
     ext.kotlin_version = "1.6.21"
 
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+    }
+
 }
 
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+
 }
 
 
