--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    // apply plugin: 'kotlin-android'
     id 'kotlin-parcelize'
     id  'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
+    //id 'kotlin-android-extensions'
 
 }
 
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.momobooklet_by_sm"
-        minSdk 26
+        minSdk 23
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -143,28 +143,28 @@ dependencies {
     // https://firebase.google.com/docs/android/setup#available-libraries
 
 
-// Add the dependency for the Firebase Authentication library
+    //Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
 
 
    implementation "com.airbnb.android:lottie:$lottieVersion"
 
-// For Automatic SMS Verification
+    // For Automatic SMS Verification
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
 
 
 
 
-//Permissions
+    //Permissions
     def fragment_version = "1.3.0"
     def activity_version = "1.2.0"
     implementation"androidx.fragment:fragment-ktx:$fragment_version"
     implementation"androidx.activity:activity-ktx:$activity_version"
 
 
-//play integrity
+    //play integrity
     // Add the dependency for the App Check library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-appcheck-playintegrity'
@@ -178,8 +178,29 @@ dependencies {
     //Logging
     implementation "commons-logging:commons-logging-api:1.1"
 
+
+
+
     //Useful For writing PDFs
     implementation 'com.github.wwdablu:SimplyPDF:2.0.0'
+
+    //Mix panel
+    implementation 'com.mixpanel.android:mixpanel-android:7.+'
+
+    //Volley
+    implementation("com.android.volley:volley:1.2.1")
+
+    // WorkManager with Coroutines
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
+
+
+
+    //SplashScreen
+    implementation("androidx.core:core-splashscreen:1.0.0")
 
 }
 
