--- a/app/build.gradle
+++ b/app/build.gradle
@@ -212,6 +212,11 @@ dependencies {
     //implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
 
+
+    //  .asLiveData(Dispatchers)
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+
 }
 
 
