--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shrinetutor2">
+        <activity
+            android:name=".HelpActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_help"
+            android:theme="@style/Theme.Shrinetutor2.Fullscreen" />
 
         <receiver
             android:name=".MyOtherSmSReceiver"
@@ -32,25 +38,23 @@
             </intent-filter>
         </receiver>
 
-
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity2"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.momobooklet_by_sm.fileprovider"
@@ -59,14 +63,11 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
-        </provider>
-
-        <!-- Remove WorkManager default initialization -->
-
+        </provider> <!-- Remove WorkManager default initialization -->
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove"/>
+            tools:node="remove" />
     </application>
 
 </manifest>
