--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
 
 
     <application
+
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:name=".BookletApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
